force-app/main/default/objects/CCS_Batch_Class__c/CCS_Batch_Class__c.object-meta.xml
<CustomObject>
    <label>Batch Class</label>
    <nameField>
        <label>Batch Identifier</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Batch Classes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>