force-app/main/default/objects/CCS_Batch_Class__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Batch Classes</relationshipLabel>
    <relationshipName>Batch_Classes</relationshipName>
    <type>Lookup</type>
</CustomField>