force-app/main/default/objects/CCS_Batch_Class__c/fields/Course_Code__c.field-meta.xml
<CustomField>
    <fullName>Course_Code__c</fullName>
    <description>SKU number</description>
    <label>Course Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>