force-app/main/default/objects/CCS_Batch_Class__c/fields/ILT_Class__c.field-meta.xml
<CustomField>
    <fullName>ILT_Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ILT Class</label>
    <referenceTo>redwing__ILT_Class__c</referenceTo>
    <relationshipLabel>Batch Classes</relationshipLabel>
    <relationshipName>Batch_Classes</relationshipName>
    <type>Lookup</type>
</CustomField>