force-app/main/default/objects/CCS_Batch_Class__c/fields/Offering_Id_Batch_Class__c.field-meta.xml
<CustomField>
    <fullName>Offering_Id_Batch_Class__c</fullName>
    <label>Offering Id Batch Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>