force-app/main/default/objects/CCS_Batch_Class__c/fields/Training_Site_Address__c.field-meta.xml
<CustomField>
    <fullName>Training_Site_Address__c</fullName>
    <label>Training Site Address</label>
    <length>80</length>
    <type>Text</type>
</CustomField>