force-app/main/default/objects/CCS_Batch_Class__c/fields/Training_Site_City__c.field-meta.xml
<CustomField>
    <fullName>Training_Site_City__c</fullName>
    <label>Training Site City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>