force-app/main/default/objects/CCS_Batch_Class__c/fields/Training_Site_State__c.field-meta.xml
<CustomField>
    <fullName>Training_Site_State__c</fullName>
    <label>Training Site State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>