force-app/main/default/objects/CCS_Batch_Class__c/fields/Training_Site_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Training_Site_Zip_Code__c</fullName>
    <label>Training Site Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>